# compressor-cpp

./: .gitmodules  CMakeLists.txt  README.md
include/: BitReader.h  BitWriter.h  HuffmanCompressor.h  HuffmanDecompressor.h  HuffmanTree.h  LZSSCompressor.h  LZSSDecompressor.h  LZSSHeader.h  library.h
src/: BitReader.cpp  BitWriter.cpp  HuffmanCompressor.cpp  HuffmanDecompressor.cpp  HuffmanTree.cpp  LZSSCompressor.cpp  LZSSDecompressor.cpp  library.cpp
test/: compressor_tests.cpp
